<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_activity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail_photo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_detail_name"
        tools:src="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_detail_photo"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/coders_name" />

    <TextView
        android:id="@+id/tv_detail_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_detail_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
        tools:text="@string/user_name" />

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/tv_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_photo"
        tools:text="@string/description" />

    <ImageView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_description"
        app:srcCompat="@drawable/ic_location_city" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/city"
        app:layout_constraintStart_toEndOf="@+id/city"
        app:layout_constraintTop_toTopOf="@+id/city"
        tools:text="@string/city" />

    <ImageView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/city"
        app:layout_constraintStart_toEndOf="@+id/tv_city"
        app:layout_constraintTop_toTopOf="@+id/city"
        app:srcCompat="@drawable/ic_location_on" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/location"
        app:layout_constraintStart_toEndOf="@+id/location"
        app:layout_constraintTop_toTopOf="@+id/location"
        tools:text="@string/location" />

    <ImageView
        android:id="@+id/link"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city"
        app:srcCompat="@drawable/ic_link" />

    <TextView
        android:id="@+id/tv_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/link"
        app:layout_constraintStart_toEndOf="@+id/link"
        app:layout_constraintTop_toTopOf="@+id/link"
        tools:text="@string/github_link" />

    <ImageView
        android:id="@+id/follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link"
        app:srcCompat="@drawable/ic_follower" />

    <TextView
        android:id="@+id/tv_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/follower"
        app:layout_constraintStart_toEndOf="@+id/follower"
        app:layout_constraintTop_toTopOf="@+id/follower"
        tools:text="@string/follower" />

    <ImageView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/follower"
        app:layout_constraintStart_toEndOf="@+id/tv_follower"
        app:layout_constraintTop_toTopOf="@+id/follower"
        app:srcCompat="@drawable/ic_following" />

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/following"
        app:layout_constraintStart_toEndOf="@+id/following"
        app:layout_constraintTop_toTopOf="@+id/following"
        tools:text="@string/following" />

    <Button
        android:id="@+id/btn_follow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/follow"
        android:textColor="@color/blueLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/follower" />

</androidx.constraintlayout.widget.ConstraintLayout>